albums list added to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div id="posts-wrapper"></div>
+  <div id="albums-wrapper"></div>
   <script src="script.js"></script>
 </body>
 </html>
