--- a/users.html
+++ b/users.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Post Page</title>
+  <title>Users Page</title>
 </head>
 <body>
-  <div id="post-wrapper"></div>
+  <div id="users-wrapper"></div>
 
-  <script src="post.js"></script>
+  <script src="users.js"></script>
 </body>
 </html>
