--- a/index.html
+++ b/index.html
@@ -5,8 +5,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>API project</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="./index.html" class="active">Home</a></li>
+        <li><a href="./users.html">Users</a></li>
+        <li><a href="./albums.html">Albums</a></li>
+        <li><a href="./posts.html">Posts</a></li>
+      </ul>
+    </nav>
+
+    <form id="search-form" action="./search.html">
+      <input type="text" name="search-input" id="search">
+      <input type="submit" value="Search">
+    </form>
+  </header>
+
   <div id="posts-wrapper"></div>
   <div id="albums-wrapper"></div>
   <script src="script.js"></script>
