header.js added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <header>
+  <!-- <header>
     <nav>
       <ul>
         <li><a href="./index.html" class="active">Home</a></li>
@@ -22,10 +22,12 @@
       <input type="text" name="search-input" id="search">
       <input type="submit" value="Search">
     </form>
-  </header>
+  </header> -->
 
   <div id="posts-wrapper"></div>
   <div id="albums-wrapper"></div>
-  <script src="script.js"></script>
+
+  <script src="./script.js"></script>
+  <script src="./header.js"></script>
 </body>
 </html>
