--- a/users.html
+++ b/users.html
@@ -8,24 +8,9 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="./users.html"  class="active">Users</a></li>
-        <li><a href="./albums.html">Albums</a></li>
-        <li><a href="./posts.html">Posts</a></li>
-      </ul>
-    </nav>
-
-    <form id="search-form" action="./search.html">
-      <input type="text" name="search-input" id="search">
-      <input type="submit" value="Search">
-    </form>
-  </header>
-
   <div id="users-wrapper"></div>
 
-  <script src="users.js"></script>
+  <script src="./users.js"></script>
+  <script src="./header.js"></script>
 </body>
 </html>
