--- a/album.html
+++ b/album.html
@@ -5,10 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Album</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="album-wrapper"></div>
 
-  <script src="album.js"></script>
+  <script src="./album.js"></script>
+  <script src="./header.js"></script>
 </body>
 </html>
