--- a/albums.html
+++ b/albums.html
@@ -5,10 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Albums Page</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="albums-wrapper"></div>
   
-  <script src="albums.js"></script>
+  <script src="./albums.js"></script>
+  <script src="./header.js"></script>
 </body>
 </html>
