--- a/posts.html
+++ b/posts.html
@@ -5,10 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Posts Page</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="posts-wrapper"></div>
 
-  <script src="posts.js"></script>
+  <script src="./posts.js"></script>
+  <script src="./header.js"></script>
 </body>
 </html>
