--- a/test2.html
+++ b/test2.html
@@ -10,5 +10,6 @@
   
   <a href="test/test.html">Pirma</a>
   <a href="./test/test.html">Antra</a>
+  <a href="./test">Antra 2</a>
 </body>
 </html>
