users search with javascript

--- a/search.html
+++ b/search.html
@@ -10,8 +10,8 @@
 <body>
   <h1>Search Page:</h1>
 
-  <form>
-    <input type="text" name="" id="">
+  <form id="search-page-form">
+    <input type="text" name="search-input" id="search-input-text">
     <input type="submit" value="Search">
   </form>
 
