renderSingleComment and firstLetterUpperCase functions added

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <div id="posts-wrapper"></div>
   <div id="albums-wrapper"></div>
 
+  <script src="./functions.js"></script>
   <script src="./script.js"></script>
   <script src="./header.js"></script>
 </body>
