--- a/search.html
+++ b/search.html
@@ -17,8 +17,7 @@
 
   <div id="search-results"></div>
 
-  <script src="./functions.js"></script>
-  <script src="./search.js"></script>
+  <script type="module" src="./search.js"></script>
   <script src="./header.js"></script>
 </body>
 </html>
