--- a/users.html
+++ b/users.html
@@ -10,8 +10,7 @@
 <body>
   <div id="users-wrapper"></div>
 
-  <script src="./functions.js"></script>
-  <script src="./users.js"></script>
+  <script type="module" src="./users.js"></script>
   <script src="./header.js"></script>
 </body>
 </html>
