--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
   <div id="posts-wrapper"></div>
   <div id="albums-wrapper"></div>
 
-  <script src="./functions.js"></script>
-  <script src="./script.js"></script>
+  <script type="module" src="./script.js"></script>
   <script src="./header.js"></script>
 </body>
 </html>
