--- a/post.html
+++ b/post.html
@@ -10,8 +10,7 @@
 <body>
   <div id="post-wrapper"></div>
 
-  <script src="./functions.js"></script>
-  <script src="./post.js"></script>
+  <script type="module" src="./post.js"></script>
   <script src="./header.js"></script>
 </body>
 </html>
