--- a/posts.html
+++ b/posts.html
@@ -10,8 +10,7 @@
 <body>
   <div id="posts-wrapper"></div>
 
-  <script src="./functions.js"></script>
-  <script src="./posts.js"></script>
+  <script type="module" src="./posts.js"></script>
   <script src="./header.js"></script>
 </body>
 </html>
