folders for components added

--- a/users.html
+++ b/users.html
@@ -10,6 +10,6 @@
 <body>
   <div id="users-wrapper"></div>
 
-  <script type="module" src="./users.js"></script>
+  <script type="module" src="../type11-api-project/users/users.js"></script>
 </body>
 </html>
