--- a/create-post.html
+++ b/create-post.html
@@ -30,6 +30,6 @@
     <input type="submit" value="Create post">
   </form>
   
-  <script type="module" src="create-post.js"></script>
+  <script type="module" src="createPost.js"></script>
 </body>
 </html>
