create post added

--- a/edit-post.html
+++ b/edit-post.html
@@ -4,12 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Users Page</title>
-  <link rel="stylesheet" href="./style.css">
+  <title>Edit Post</title>
 </head>
 <body>
-  <div id="users-wrapper"></div>
-
-  <script type="module" src="./users/users.js"></script>
+  
+  <script src="./editPost/editPost.js"></script>
 </body>
 </html>
