--- a/post.html
+++ b/post.html
@@ -8,8 +8,27 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="post-wrapper"></div>
+  <form id="comments-form">
+    <div class="form-control">
+      <label for="comment-name">Name:</label>
+      <input type="text" name="name" id="comment-name">
+    </div>
 
+    <div class="form-control">
+      <label for="comment-email">Email:</label>
+      <input type="email" name="email" id="comment-email">
+    </div>
+
+    <div class="form-control">
+      <label for="comment-body">Content:</label>
+      <textarea name="body" id="comment-body" cols="30" rows="10"></textarea>
+    </div>
+
+    <input type="submit" value="Add a comment">
+  </form>
+
+  <div id="post-wrapper"></div>
+  
   <script type="module" src="./post.js"></script>
 </body>
 </html>
