edit comment func

--- a/post.html
+++ b/post.html
@@ -24,7 +24,7 @@
       <textarea name="body" id="comment-body" cols="30" rows="10"></textarea>
     </div>
 
-    <input type="submit" value="Add a comment">
+    <input type="submit" value="Add a comment" id="edit-button">
   </form>
 
   <div id="post-wrapper"></div>
