--- a/posts.html
+++ b/posts.html
@@ -10,7 +10,22 @@
 <body>
   <div id="posts-wrapper"></div>
 
-
+  <div>
+    <a href="#">First</a>
+    <a href="#">Prev</a>
+    <a href="#">1</a>
+    <a href="#">2</a>
+    <a href="#">3</a>
+    <a href="#">4</a>
+    <a href="#">5</a>
+    <a href="#">6</a>
+    <a href="#">7</a>
+    <a href="#">8</a>
+    <a href="#">9</a>
+    <a href="#">10</a>
+    <a href="#">Next</a>
+    <a href="#">Last</a>
+  </div>
 
   <script type="module" src="./posts.js"></script>
 </body>
