--- a/posts.html
+++ b/posts.html
@@ -10,16 +10,12 @@
 <body>
   <div id="posts-wrapper"></div>
 
-  <div>
-    <a href="#">First</a>
-    <a href="#">Prev</a>
-    <a href="./posts.html?page=1&limit=25">1</a>
-    <a href="./posts.html?page=2&limit=25">2</a>
-    <a href="./posts.html?page=3&limit=25">3</a>
-    <a href="./posts.html?page=4&limit=25">4</a>
-    <a href="#">Next</a>
-    <a href="#">Last</a>
-  </div>
+  <!-- <select name="" id="">
+    <option value="">10</option>
+    <option value="">20</option>
+    <option value="">25</option>
+    <option value="">50</option>
+  </select> -->
 
   <script type="module" src="./posts.js"></script>
 </body>
