--- a/posts.html
+++ b/posts.html
@@ -11,10 +11,10 @@
   <div id="posts-wrapper"></div>
 
   <!-- <select name="" id="">
-    <option value="">10</option>
-    <option value="">20</option>
-    <option value="">25</option>
-    <option value="">50</option>
+    <option value="10">10</option>
+    <option value="20">20</option>
+    <option value="25">25</option>
+    <option value="50">50</option>
   </select> -->
 
   <script type="module" src="./posts.js"></script>
